force-app/main/default/objects/Show__c/Show__c.object-meta.xml
<CustomObject>
    <label>Spettacolo</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>