force-app/main/default/objects/Show__c/fields/Datetime__c.field-meta.xml
<CustomField>
    <fullName>Datetime__c</fullName>
    <label>Data e Ora</label>
    <type>DateTime</type>
</CustomField>