force-app/main/default/objects/Show__c/fields/ReportedBy__c.field-meta.xml
<CustomField>
    <fullName>ReportedBy__c</fullName>
    <label>Segnalato Da</label>
    <length>255</length>
    <type>Text</type>
</CustomField>