force-app/main/default/objects/Show__c/fields/SubStructure__c.field-meta.xml
<CustomField>
    <fullName>SubStructure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub - Struttura</label>
    <referenceTo>SubStructure__c</referenceTo>
    <relationshipLabel>Spettacoli</relationshipLabel>
    <relationshipName>Shows</relationshipName>
    <type>Lookup</type>
</CustomField>