force-app/main/default/objects/Show__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Tipologia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TypeShow</valueSetName>
    </valueSet>
</CustomField>